// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> redirects to login for private route 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Login />,
]
`;

exports[`<App /> renders calculator page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Calculator />,
]
`;

exports[`<App /> renders favorites page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Favorites />,
]
`;

exports[`<App /> renders flavor stash page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <FlavorStash />,
]
`;

exports[`<App /> renders flavors page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Flavors />,
]
`;

exports[`<App /> renders home by default 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Home />,
]
`;

exports[`<App /> renders login page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Login />,
]
`;

exports[`<App /> renders profile page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Profile />,
]
`;

exports[`<App /> renders recipe page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Recipe />,
]
`;

exports[`<App /> renders register page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Register />,
]
`;

exports[`<App /> renders shopping list page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <ShoppingList />,
]
`;

exports[`<App /> renders user recipes page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Recipes />,
]
`;

exports[`<App /> renders user settings page 1`] = `
Array [
  <Header />,
  <ToastDrawer />,
  <Settings />,
]
`;
